--- a/back-end/HospitalSena/src/main/resources/application.properties
+++ b/back-end/HospitalSena/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/HospitalSena
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #create 
 #update
 #create-drop
