--- a/HospitalSena/bin/src/main/resources/application.properties
+++ b/HospitalSena/bin/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/HospitalSena
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/hospitalsena
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #create 
 #update
 #create-drop
